# R-Type

./: CMakeLists.txt  README.md  conanfile.txt
RFC/: RFC.txt  RFC.xml
engine/include/: ASystem.hpp  Components.hpp  ECSEngine.hpp  EntityManager.hpp  Filter.hpp  IComponents.hpp  IStorage.hpp  ISystem.hpp  Storage.hpp  StorageManager.hpp  SystemManager.hpp
engine/src/: ASystem.cpp  ECSEngine.cpp  EntityManager.cpp  Filter.cpp  StorageManager.cpp  SystemManager.cpp
include/Client/: Alien.hpp  AlienShoot.hpp  Audio.hpp  Background.hpp  Bomb.hpp  Client.hpp  ClientState.hpp  Entity.hpp  GifDrawer.hpp  IEntity.hpp  IGraphicLibrary.hpp  ItemSpeed.hpp  MenuDrawer.hpp  Obstacle.hpp  ParallaxShader.hpp  Parser.hpp  Pirate.hpp  PirateShoot.hpp  Player.hpp  PlayerShoot.hpp  Players.hpp  SFMLModule.hpp  Spaceship.hpp  SpaceshipShoot.hpp  TextDrawer.hpp  Ufo.hpp  UfoShoot.hpp  Vector.hpp  Wall.hpp  keyTraducer.hpp
include/Server/: Buffer.hpp  Client.hpp  DLLoader.hpp  Lobby.hpp  Zipper.hpp  dirReader.hpp  gameLoop.hpp  udpServer.hpp
include/Server/Components/: Bomb.hpp  Dimensions.hpp  Life.hpp  Player.hpp  Position.hpp  Velocity.hpp  entityDetails.hpp
include/Server/Systems/: bombSystem.hpp  collisionSystem.hpp  eventSystem.hpp  monsterSystem.hpp  movementSystem.hpp  routineSystem.hpp  winSystem.hpp
include/Shared/: BinaryProtocol.hpp  INetwork.hpp  SignalHandler.hpp  pathHandler.hpp
include/Shared/Monsters/: AMonster.hpp  Error.hpp  IMonster.hpp  entityType.hpp
ressources/: config_file.txt
ressources/monsters/: CMakeLists.txt
ressources/monsters/pirate/: CMakeLists.txt
ressources/monsters/pirate/include/: Pirate.hpp
ressources/monsters/pirate/src/: Pirate.cpp
ressources/monsters/spaceship/: CMakeLists.txt
ressources/monsters/spaceship/include/: Spaceship.hpp
ressources/monsters/spaceship/src/: Spaceship.cpp
ressources/monsters/src/: AMonster.cpp
ressources/monsters/ufo/: CMakeLists.txt
ressources/monsters/ufo/include/: Ufo.hpp
ressources/monsters/ufo/src/: Ufo.cpp
src/Client/: Alien.cpp  AlienShoot.cpp  Audio.cpp  Background.cpp  Bomb.cpp  Client.cpp  Entity.cpp  GifDrawer.cpp  ItemSpeed.cpp  MenuDrawer.cpp  Obstacle.cpp  Parser.cpp  Pirate.cpp  PirateShoot.cpp  Player.cpp  PlayerShoot.cpp  Players.cpp  SFMLModule.cpp  Spaceship.cpp  SpaceshipShoot.cpp  TextDrawer.cpp  Ufo.cpp  UfoShoot.cpp  Wall.cpp  keyTraducer.cpp  main.cpp  parallaxShader.cpp
src/Server/: Buffer.cpp  Client.cpp  Lobby.cpp  dirReader.cpp  gameLoop.cpp  main.cpp  udpServer.cpp
src/Server/Components/: Bomb.cpp  Dimensions.cpp  Life.cpp  Player.cpp  Position.cpp  Velocity.cpp  entityDetails.cpp
src/Server/Systems/: bombSystem.cpp  collisionSystem.cpp  eventSystem.cpp  monsterSystem.cpp  movementSystem.cpp  routineSystem.cpp  winSystem.cpp
src/Shared/: BinaryProtocol.cpp  SignalHandler.cpp  pathHandler.cpp
src/Shared/Monsters/: Error.cpp
tests/: CMakeLists.txt
tests/Server/: testDirReader.cpp  testECSEngine.cpp  testPathHandler.cpp
